# 5G_dynamic_compression

./: CMakeLists.txt  README.md  install-torch.sh  plot.py
include/d_compression/: bfp.h  channel.h  controller.h  dqn.h  iq.h  iq_state_machine.h  lz77.h  rle.h  zmq_channel.h
include/dqn/: Trainer.h  dqn.h
include/srsran/d_compression/: bfp.h  compression.h  iq.h  iq_compression_bfp_impl.h  iq_state_machine.h  zmq_channel.h
lib/: CMakeLists.txt
lib/d_compression/: CMakeLists.txt  bfp.cpp  compression.cpp  dqn.cpp  iq.cpp  iq_compression_bfp_impl.cpp  iq_state_machine.cpp  lz77.cpp  rle.cpp  zmq_channel.cpp
lib/dqn/: CMakeLists.txt  ExperienceReplay.cpp  PrioritizedExperienceReplay.cpp  Trainer.cpp
lib/hdr/: BitBuffer.h  Compression.h  Iq.h  PackUtils.h  UhdChannel.h  UhdSender.h  ZmqChannel.h  ZmqSender.h
lib/ofh/compression/: packing_utils_generic.h
lib/src/: Compression.cc  Iq.cc  ZmqChannel.cc
receiver/: CMakeLists.txt  main.cpp
receiver/src/: main.cc
results/: dqn_training.csv  none.csv  rle.csv  state_machine.csv
results/initial_testing/: none_only.csv  state_machine_memory_full.csv
results/old/: bfp_only.csv  state_machine_memory.csv
results/secondary_testing/: lz77.csv
sender/: CMakeLists.txt  main.cpp  video.cpp
sender/src/: main.cc
tests/: CMakeLists.txt  bfp_compress_test.cpp  iq_conv_test.cpp  lz77_compress_test.cpp  rle_compress_test.cpp
